# public/swagger-docs/swagger.json
@@ -404,38 +404,35 @@
                 }
             }
         },
-        "/api/location-search": {
-            "get": {
+        "/api/find-suburbs": {
+            "post": {
                 "tags": [
                     "General"
                 ],
-                "summary": "Search all location and their intructors based on street,city or postcode",
-                "description": "Retrieve a list of all locations street,city or postcode and their intructors. It returns latest intstructors in case of 'Perth no search' ",
-                "operationId": "d1396448bc8bd31238afd15090a95fa8",
-                "parameters": [
-                    {
-                        "name": "s",
-                        "in": "query",
-                        "description": "You can enter street or city or postcode ",
-                        "required": false,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "transmissionType",
-                        "in": "query",
-                        "required": true,
-                        "schema": {
-                            "description": "Select auto (isAuto) or manual (isManual)",
-                            "type": "string",
-                            "enum": [
-                                "auto",
-                                "manual"
-                            ]
+                "summary": "Search all location based on queried street,city or postcode",
+                "description": "Retrieve a list of all locations",
+                "operationId": "a18a93f1b256538d425a9cbe4c2281cc",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "filter": {
+                                        "oneOf": [
+                                            {
+                                                "type": "string"
+                                            },
+                                            {
+                                                "type": "integer"
+                                            }
+                                        ]
+                                    }
+                                },
+                                "type": "object"
+                            }
                         }
                     }
-                ],
+                },
                 "responses": {
                     "200": {
                         "description": "OK"
